Fix path with space to URL